# Always-On-Static-2D

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp
Box2D/: PhysicsWorld.cpp
GUI/: Button.cpp  Button.h  Label.cpp  Label.h  TextInput.cpp  TextInput.h
Game/: GameActor.cpp  GameActor.h  PlayerActor.cpp  PlayerActor.h  animationObjectTakesRefSprite.cpp  currentSymbolObject.cpp  currentSymbolObject.h  genericGameObject.cpp  genericGameObject.h  genericMultiAnimationGameObject.cpp  genericMultiAnimationGameObject.h  tvGameObject.h
GameStates/: CreditScreen.cpp  CreditScreen.h  GameState.h  IngameState.cpp  MenuGameState.cpp  MenuGameState.h  SplashScreen.cpp  SplashScreen.h  TvGame.cpp  TvGame.h
ResourceManagement/: ResourceManager.h
Resources/tv/: cacti.xcf
Tools/: TimeUtils.h  Tools.h  UDPLayer.h
src/: Application.cpp  Application.h  main.cpp
src/Box2D/: PhysicsWorld.cpp  PhysicsWorld.h
src/GUI/: Button.cpp  Button.h  Label.cpp  Label.h  TextInput.cpp  TextInput.h
src/Game/: GameActor.cpp  GameActor.h  GamePosition.h  PlayerActor.cpp  PlayerActor.h  TransformGameObject.cpp  TransformGameObject.h  animatedGenericGameObject.cpp  animatedGenericGameObject.h  animationObjectTakesRefSprite.h  currentSymbolObject.cpp  gameObject.h  genericMultiAnimationGameObject.cpp  staticNoiseActor.cpp  staticNoiseActor.h  tvGameObject.cpp
src/GameStates/: GameState.h  IngameState.cpp  IngameState.h  MenuGameState.cpp  MenuGameState.h  TvGame.cpp  TvGame.h
src/ResourceManagement/: ResourceManager.cpp
src/Tools/: TimeUtils.h  (+2 more)
